# backtrack

./: Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: docker-image-build.yml  docker-image-release.yml
backtrack/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: server
templates/: base.html  groups.html  home.html  login.html  signout.html  signup.html
templates/tracker/: assessment_confirm_delete.html  assessment_detail.html  assessment_form.html  assessment_list.html  standard_confirm_delete.html  standard_detail.html  standard_form.html  standard_list.html  student_confirm_delete.html  student_detail.html  student_form.html  student_list.html
tracker/: 0003_widaevaluation.py  0004_auto_20210227_1447.py  admin.py  assessment_detail.html  forms.py  groups.py  models.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_standard.py  0003_widaevaluation.py  0004_auto_20210227_1447.py  0005_auto_20210312_1403.py
