[tool.poetry]
name = "backtrack"
version = "0.1.0"
description = ""
authors = ["Mary <maryburrito@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.2"
Django = "^3.1.6"
django-bootstrap4 = "^2.3.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
